Polish code (#631)